<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_main"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingTop="@dimen/layout_top_padding"
        android:paddingRight="@dimen/layout_padding"
        tools:context=".SplashActivity">

        <TextView
            android:id="@+id/textViewTitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_top"
            android:fontFamily="sans-serif-black"
            android:text="SIGN UP"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large" />

        <LinearLayout
            android:id="@+id/linearName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitleRegister"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="FIRST NAME"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="LAST NAME"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearName"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_negative"
                android:layout_marginRight="@dimen/margin_top"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-light"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-light"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewRegisterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearEditName"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif-black"
            android:text="EMAIL ADDRESS"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewRegisterEmail"
            android:layout_marginLeft="@dimen/margin_negative"
            android:layout_marginRight="@dimen/margin_negative"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/textViewRegisterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextRegisterEmail"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif-black"
            android:text="PASSWORD"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewRegisterPassword"
            android:layout_marginLeft="@dimen/margin_negative"
            android:layout_marginRight="@dimen/margin_negative"
            android:layout_marginBottom="@dimen/margin_very_small"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/editTextRegisterPassword"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/button_box"
            android:fontFamily="sans-serif-medium"
            android:text="Register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small_medium" />

        <ProgressBar
            android:id="@+id/progressRegister"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/buttonRegister"
            android:layout_alignBottom="@id/buttonRegister"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_very_small"
            android:elevation="2dp"
            android:indeterminate="false"
            android:maxHeight="5dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewActionLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonRegister"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="Have an account? Login here."
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small" />

    </RelativeLayout>
</ScrollView>