...
            android:elevation="2dp"
            android:indeterminate="false"
            android:maxHeight="5dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewActionRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLogin"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="Don't have an account? Register here."
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small" />

    </RelativeLayout>

</ScrollView>
